<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:id="@+id/cardViewUser"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:paddingTop="8dp"
    android:paddingBottom="5dp"
    android:paddingStart="8dp"
    android:paddingEnd="8dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="8dp">
            <TextView
                android:id="@+id/cardFirstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:textStyle="bold"
                android:textSize="24sp"
                android:paddingStart="8dp"
                android:paddingEnd="24dp">
            </TextView>
            <TextView
                android:id="@+id/cardLastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                android:textSize="24sp">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="8dp"
            android:paddingEnd="8dp">
            <TextView
                android:id="@+id/cardEmailAddr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_addr"
                android:textStyle="italic"
                android:textSize="18sp"
                android:paddingBottom="5dp">
            </TextView>

            <TextView
                android:id="@+id/cardTel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tel"
                android:textStyle="italic"
                android:textSize="18sp"
                android:paddingBottom="8dp">
            </TextView>

        </LinearLayout>

    </LinearLayout>



</androidx.cardview.widget.CardView>